# poll-story-telegram-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  entrypoint.sh  image_gen.py  main.py  open_ai_gen.py  pyproject.toml  python-cron  requirements.txt  run-cron-job.sh  state.py  story_gen.py  telegram_poster.py
.github/workflows/: docker.yml
app/: config.py  google_tts.py  image_gen.py  main.py  open_ai_gen.py  state.py  telegram_poster.py  telemetry.py
app/tests/: test_config.py  test_google_tts.py  test_telegram_poster.py
